--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,12 @@ color: white;
 }
 
 
+@media only screen and (max-width: 700px) {
+  body {
+    background-color: #418ae49a;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 2%;
+    margin-bottom: 1em; 
+  }
+}
